fixed Alignment Ausrichtung

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -357,6 +357,7 @@
 
       td:nth-child(1){
         font-size: $fontSize-third;
+        padding-left: 0;
         min-width: 20%;
       }
       td:nth-child(2){
